[package]
name = "waddle"
version = "0.1.0"
edition = "2021"

[dependencies]
avr-device = { version = "0.5.0", features = ["atmega32u4"] }
usb-device = "0.2"
atmega-usbd = { git = "https://github.com/qwelyt/atmega-usbd", branch = "master" }
usbd-hid = "0.6"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal.git"
branch = "main"
features = ["sparkfun-promicro"]

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
opt-level = "s"
lto = true
